--- a/tufa-app-backend/tsconfig.json
+++ b/tufa-app-backend/tsconfig.json
@@ -23,7 +23,7 @@
     // "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
     // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
     "experimentalDecorators": true,
-
+    "strictPropertyInitialization": false,
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
