--- a/packages/tufa-app-backend/package.json
+++ b/packages/tufa-app-backend/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node index.ts",
-    "migrate": "npx prisma migrate dev --name init",
+    "dev": "ts-node src/index.ts",
+    "migrate": "npx prisma migrate dev --name init --schema ./src/prisma/schema.prisma",
     "generate": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.4",
     "ts-node": "^10.4.0",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^3.3.0",
     "class-validator": "^0.13.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.6.1",
